Fix autocomplete dropdown overflow

--- a/src/app/modules/multi-tenant-network/admin-console/tabs/general/featured/add-user-modal/add-featured-entity-modal.component.ng.scss
+++ b/src/app/modules/multi-tenant-network/admin-console/tabs/general/featured/add-user-modal/add-featured-entity-modal.component.ng.scss
@@ -15,6 +15,8 @@
     }
 
     .m-modalV2__body {
+      overflow-y: visible;
+
       .m-addFeaturedEntity__inputContainer {
         display: flex;
         flex-flow: column;
